feat: tarefa02 concluida. implementado gerarDadosTexto e criarDoTexto